--- a/NeuroApp/Storyboard/Quiz/QuizPartThree.storyboard
+++ b/NeuroApp/Storyboard/Quiz/QuizPartThree.storyboard
@@ -102,7 +102,7 @@
                         <outlet property="progressTabBar" destination="NSq-IM-AXc" id="VTt-w7-r2t"/>
                         <outlet property="progressViewStack" destination="afg-Ta-jzk" id="9uM-N0-4hP"/>
                         <outlet property="questionLabel" destination="FNR-Ys-L6j" id="j6r-hz-mse"/>
-                        <segue destination="7xP-Jr-byf" kind="presentation" identifier="ShowScoreScreen" modalPresentationStyle="fullScreen" id="K9H-Iz-i7M"/>
+                        <segue destination="7xP-Jr-byf" kind="show" identifier="ShowScoreScreen" id="K9H-Iz-i7M"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
